k8s-deployment/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend    
          image: shani000786/kubernates-project-01-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - port: 3001
      targetPort: 3001
